@@ -558,6 +558,22 @@ table {
   padding: 2% 2.5%;
 	margin-bottom: 30px;
 }
+/* light blue (default alternate) */
+.entry-content .wp-block-gccustom-fancy-quote-box.is-style-default-alt,
+.wp-block-gccustom-fancy-quote-box.is-style-default-alt {
+  background: var(--super-light-blue);
+  border-left: 5px solid var(--medium-blue);
+  padding: 2% 2.5%;
+	margin-bottom: 30px;
+}
+/* light blue (2nd default alternate) */
+.entry-content .wp-block-gccustom-fancy-quote-box.is-style-default-alt-2,
+.wp-block-gccustom-fancy-quote-box.is-style-default-alt-2 {
+  background: var(--super-light-blue);
+  border-left: 5px solid var(--light-blue);
+  padding: 2% 2.5%;
+	margin-bottom: 30px;
+}
 /* red (alert) */
 .entry-content .wp-block-gccustom-fancy-quote-box.is-style-alert,
 .wp-block-gccustom-fancy-quote-box.is-style-alert,
@@ -597,6 +613,7 @@ table {
 	margin-bottom: 10px;
 }
 .wp-block-gccustom-reference-box p {
+	font-size: 14px;
 	padding-left: 50px;
 	text-indent: -50px;
 }
